Update 1.04 Understand legal, regulatory, and compliance issues that pertain to information security in a holistic context.md

--- a/DOMAIN1: Security and Risk Management/1.04 Understand legal, regulatory, and compliance issues that pertain to information security in a holistic context.md
+++ b/DOMAIN1: Security and Risk Management/1.04 Understand legal, regulatory, and compliance issues that pertain to information security in a holistic context.md
@@ -100,7 +100,8 @@ The following table will show what, how and and how trade secrets, patents, copy
 
 :brain: A patent is the strongest form of Intellectual Property Protection.
 
-Security professionals should possess knowledge of the legal aspects concerning software licensing agreements. There are four prevalent types of license agreements in use today:
+Security professionals should possess knowledge of the legal aspects concerning software licensing agreements.
+#### There are four prevalent types of license agreements in use today:
 - Contractual license agreements involve a written contract delineating responsibilities between the software vendor and customer, commonly utilized for expensive or specialized software packages.
 - Shrink-wrap license agreements are displayed on the exterior of software packaging and typically include a clause implying agreement upon breaking the shrink-wrap seal.
 - Click-through (or browser wrap) license agreements, increasingly common, present contract terms either on the software box or within documentation, requiring users to actively acknowledge agreement during installation.
