Update 2.03 Provision information and assets securely.md

--- a/DOMAIN2: Asset Security/2.03 Provision information and assets securely.md
+++ b/DOMAIN2: Asset Security/2.03 Provision information and assets securely.md
@@ -113,4 +113,9 @@ Prior to disposing of any hardware, **sanitization** is essential. This process 
 
 Software assets encompass operating systems and applications used by an organization. Managing these assets effectively necessitates focusing on software licensing and preventing the use of unauthorized software. Organizations invest in software licenses, often utilizing license keys for activation, which typically involve communication with a licensing server to curb piracy. Protecting these license keys is crucial as leakage can invalidate the organization's software usage rights.
 Monitoring license compliance is another critical aspect of software asset management, both for legal and security reasons. For instance, if an organization possesses a license for five software installations but has only activated one, the remaining activations could be exploited if the key is compromised. This highlights the need to treat license keys as valuable assets and safeguard them appropriately.
-Ensuring that systems are free from unauthorized software is equally important. Various tools exist to remotely inspect systems, identifying unauthorized software and aiding organizations in maintaining compliance with software licensing regulations.
+Ensuring that systems are free from unauthorized software is equally important. Various tools exist to remotely inspect systems, identifying unauthorized software and aiding organizations in maintaining compliance with [software licensing regulations](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/edit/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.04%20Understand%20legal%2C%20regulatory%2C%20and%20compliance%20issues%20that%20pertain%20to%20information%20security%20in%20a%20holistic%20context.md#there-are-four-prevalent-types-of-license-agreements-in-use-today).
+
+Intangible assets, such as intellectual property, patents, trademarks, and a company's reputation, as we already said, also require careful management. Although these assets lack a physical form, they hold significant value for an organization and need protection. Assigning a monetary value to intangible assets can be challenging, often involving estimations of their potential benefits to the organization.
+For instance, the value of a patent can be estimated based on the revenue generated from products based on that patent. In the United States, patents have a validity period of 20 years, which can also factor into the valuation process.
+
+:link: See also [1.4.2]
