Update 2.03 Provision information and assets securely.md

--- a/DOMAIN2: Asset Security/2.03 Provision information and assets securely.md
+++ b/DOMAIN2: Asset Security/2.03 Provision information and assets securely.md
@@ -118,4 +118,98 @@ Ensuring that systems are free from unauthorized software is equally important. 
 Intangible assets, such as intellectual property, patents, trademarks, and a company's reputation, as we already said, also require careful management. Although these assets lack a physical form, they hold significant value for an organization and need protection. Assigning a monetary value to intangible assets can be challenging, often involving estimations of their potential benefits to the organization.
 For instance, the value of a patent can be estimated based on the revenue generated from products based on that patent. In the United States, patents have a validity period of 20 years, which can also factor into the valuation process.
 
-:link: See also [1.4.2]
+:link: See also [1.4.2](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.04%20Understand%20legal%2C%20regulatory%2C%20and%20compliance%20issues%20that%20pertain%20to%20information%20security%20in%20a%20holistic%20context.md#142-licensing-and-intellectual-property-requirements)
+
+Maintaining patents requires periodic fee payments, emphasizing the importance of diligent tracking to avoid potential loss. Large organizations typically report intangible asset values on their balance sheets in accordance with **Generally Accepted Accounting Principles (GAAP)**. This practice ensures regular review and highlights the significance of intangible assets in an organization's overall financial health.
+
+:link: More info about GAAP is available [here](https://en.wikipedia.org/wiki/Generally_Accepted_Accounting_Principles_(United_States))
+
+Given the scale and dynamic nature of asset inventories, automated tools may be indispensable. These tools, including system enumeration and endpoint management systems, provide visibility into the organization's assets and facilitate the discovery of any new or undocumented assets. Asset information is gathered through agents, client software, integration with various scanning tools, or data feeds from vendors in the case of cloud-based assets. Organizations often leverage a combination of existing tools like Active Directory, vulnerability scanners, and software license management tools to build their asset inventory system.
+The choice of specific tools depends on the organization's needs and existing infrastructure. However, **a crucial element is establishing a single, authoritative system of record for the asset inventory**. This system serves as the ultimate source of truth, resolving any conflicts that may arise from data collected by different tools. It's crucial to ensure the accuracy and completeness of data in the system of record, as it forms the basis for official reports and audit responses.
+
+```mermaid
+flowchart LR
+  A[Automated Asset Discovery] --> B[Use agents, scanning tools, client software or vendor feeds]
+  B --> C[Gather raw asset data from systems AD, endpoints, cloud, vulnerabilities, licenses]
+  C --> D{Combine data from multiple tools}
+  D --> E[Existing tools like AD, vulnerability scanners, software license managers]
+  D --> F[Cloud vendor feeds and endpoint management systems]
+
+  E & F --> G[Aggregate data into single authoritative System of Record]
+  G --> H[Deduplicate records, resolve conflicts, ensure completeness and accuracy]
+  H --> I[Driven reports, audits, compliance, incident response]
+
+    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+```
+
+Beyond the tools themselves, effective inventory management hinges on well-defined processes. This includes establishing clear guidelines for updating the inventory, including the frequency of updates and procedures for manually notifying the system when assets are added, removed, or significantly modified. In dynamic environments with frequent software deployments and fluctuating endpoint numbers, using automated tools to discover, track, and provision assets is often preferred. 
+
+:necktie: Knowing your assets is the first step in effectively protecting them. (This is so important and so often forgotten in companies)
+
+### Open Questions ###
+1. Explain the importance of sanitizing hardware before disposal.
+<details>
+  <summary>Show answer</summary>
+Sanitizing hardware before disposal is crucial to prevent unauthorized access to sensitive information that may be stored on the device. This involves completely removing all data to ensure data confidentiality and protect the organization from potential data breaches.
+</details>
+
+2. Describe two methods commonly used for tracking hardware assets.
+<details>
+  <summary>Show answer</summary>
+Two commonly used methods for tracking hardware assets are bar-code systems and RFID tags. Bar-code systems involve attaching barcodes to assets and scanning them to update their location and status. RFID tags use radio frequencies to transmit asset information to readers, enabling faster and more automated inventory tracking.
+</details>
+
+3. What challenges exist in managing intangible assets, and how do organizations address these challenges?
+<details>
+  <summary>Show answer</summary>
+Intangible assets like intellectual property are challenging to manage due to the difficulty in assigning them a monetary value. Organizations address this by estimating the potential benefits these assets will bring, such as revenue generated from a patented product. Senior management typically oversees intangible asset valuation.
+</details>
+
+4. Why is it essential to monitor software license compliance?
+<details>
+  <summary>Show answer</summary>
+Monitoring software license compliance is essential to avoid legal issues and potential penalties. Using software beyond the scope of the license agreement can result in lawsuits and financial repercussions. It also ensures that the organization is using software legally and ethically.
+</details>
+
+5. How can organizations ensure they are not running unauthorized software on their systems?
+<details>
+  <summary>Show answer</summary>
+Organizations can prevent unauthorized software from running on their systems by utilizing tools that remotely inspect systems and detect software installations. These tools compare installed software against a list of approved applications and flag any unauthorized programs, helping organizations maintain compliance with software licensing agreements.
+</details>
+
+6. What are the key benefits of using an automated tool for asset inventory management?
+<details>
+  <summary>Show answer</summary>
+Automated asset inventory management tools offer several benefits. They streamline the inventory process, reducing manual effort and potential errors. They can automatically discover new assets, track asset details, and generate reports, leading to improved accuracy, efficiency, and better control over the organization's assets.
+</details>
+
+7. What kind of information should be collected for each asset in the inventory?
+<details>
+  <summary>Show answer</summary>
+The asset inventory should include comprehensive information for each asset, covering both technical and operational details. This includes hardware specifications (manufacturer, model, serial number, location), software details (publisher, version, license information), and operational data (asset owner, data sensitivity, business purpose).
+</details>
+
+8. What is a "system of record" in the context of asset inventory, and why is it important?
+<details>
+  <summary>Show answer</summary>
+A "system of record" in asset inventory management is the designated authoritative source of asset information. It acts as the single source of truth for all asset data and is used for reporting, audits, and data requests. Having a system of record ensures data consistency and reliability across the organization.
+</details>
+
+9. Briefly describe how the asset inventory management process might differ for virtualized environments compared to on-premises assets.
+<details>
+  <summary>Show answer</summary>
+Asset inventory management in virtualized environments often involves utilizing automated tools like Puppet, Chef, or Ansible for dynamic asset discovery, provisioning, and tracking. These tools are designed to handle the fluctuating nature of virtual assets. On-premises asset management may rely more on manual processes or traditional inventory tools.
+</details>
+
+10. Why is it important to update the asset inventory regularly and notify the administrator of significant asset changes?
+<details>
+  <summary>Show answer</summary>
+Regularly updating the asset inventory and notifying the administrator of significant changes is essential to maintain its accuracy and reliability. Assets are constantly changing – being added, removed, updated, or relocated. Keeping the inventory current ensures that it reflects the actual state of the organization's assets, which is critical for security, compliance, and operational efficiency.
+</details>
+
+---
+
+## 2.3.3 Asset Management ##
+
+An asset, like for example a  server, starts its journey from procurement, moving through various phases like design, operation, maintenance, and finally disposal.
