Update 2.03 Provision information and assets securely.md

--- a/DOMAIN2: Asset Security/2.03 Provision information and assets securely.md
+++ b/DOMAIN2: Asset Security/2.03 Provision information and assets securely.md
@@ -212,4 +212,109 @@ Regularly updating the asset inventory and notifying the administrator of signif
 
 ## 2.3.3 Asset Management ##
 
-An asset, like for example a  server, starts its journey from procurement, moving through various phases like design, operation, maintenance, and finally disposal.
+An asset, like for example a  server, starts its journey from procurement, moving through various phases like design, operation, maintenance, and finally disposal. Each stage presents unique security challenges. Imagine neglecting to securely dispose of an old hard drive – sensitive data could easily fall into the wrong hands! That's why a robust asset management program is crucial.
+
+:necktie: Asset management is not just about keeping an inventory; it's about actively managing assets throughout their entire lifecycle, ensuring their security and maximizing their value.
+
+:bulb: **ISO 55000** is a set of international standards for asset management that provides a framework for organizations to establish, implement, and continuously improve their asset management systems. It focuses on optimizing the lifecycle of assets, ensuring that they deliver value while minimizing risks and costs. The standard covers aspects such as strategic alignment, governance, and performance measurement, aiming to help organizations maximize the value of their assets.
+
+**ISO 19770** is a set of international standards focused on IT asset management (ITAM), providing guidelines for managing software and hardware assets within an organization. The standard helps organizations optimize the use of their IT assets, ensure compliance with licensing agreements, and reduce risks related to unauthorized software. It includes standards like ISO 19770-1, which outlines a framework for IT asset management, and ISO 19770-2, which defines a standard for software identification tags.
+
+ISO 55000 focuses on asset management across all types of assets, including physical and non-physical assets, aiming to optimize their lifecycle and value. In contrast, ISO 19770 specifically targets IT asset management, providing guidelines for managing and tracking software and hardware assets within an organization to ensure compliance and optimize their use.
+
+
+:link: Learn more about [ITIL Asset Management](https://www.axelos.com/resource-hub/blog/it-asset-management-and-itil-4-guiding-principles)
+
+Effective asset management involves several key activities:
+1. **Assignment of Ownership**: Clearly defining who is responsible for each asset ensures accountability and streamlines security processes.
+2. **IT Asset Management (ITAM)**: ITAM focuses on governing and managing all your IT assets, both tangible and intangible. This includes hardware, software, data, and even the processes associated with them. Think of ITAM as the meticulous librarian who keeps track of every book, ensures they're in good condition, and knows when it's time to retire them. ITAM isn't just a best practice; it's got international standards backing it up! The ISO 19770 family of standards provides a comprehensive framework for managing IT assets, helping organizations control risks and costs. This includes establishing processes, defining terminology, and even setting standards for software identification tags, ensuring you know exactly what software is running on your hardware.
+3. **Configuration Management**: This involves meticulously documenting and controlling system and software configurations. Imagine a network with misconfigured devices – a security nightmare waiting to happen! Configuration management ensures that systems are set up securely and remain that way, minimizing vulnerabilities.Remember the importance of secure configurations? Baselines are your blueprints for achieving this. A system baseline outlines the specific versions and settings required for building a system correctly. A security baseline, on the other hand, defines the minimum security controls needed to protect a system. Think of them as the safety regulations ensuring your "IT building" stands strong against threats. Organizations often use checklists and guides, like those from the National Checklist Program (NCP), to establish and maintain secure baselines.
+4. **Change Management**: Change is inevitable in any IT environment, but uncontrolled change can wreak havoc on your security posture. Change management establishes standardized processes for making modifications to assets, ensuring that all changes are authorized, implemented correctly, and documented thoroughly.
+
+```mermaid
+flowchart LR
+  A[Start: Effective Asset Management] --> B[Assignment of Ownership]
+  B --> C[IT Asset Management (ITAM)]
+  C --> C1[Manage hardware, software, data, processes throughout lifecycle]
+  C1 --> C2[Align with ISO‑19770 standards for consistency & compliance]
+  C --> D[Configuration Management]
+  D --> D1[Document system/software settings thoroughly]
+  D1 --> D2[Define baselines – secure & system]
+  D2 --> D3[Ensure secure configurations are maintained]
+  C --> E[Change Management]
+  E --> E1[Authorize and document modifications to assets/configs]
+  E1 --> E2[Maintain system integrity and prevent misconfiguration]
+  F[Integration] --> A
+  C & D & E --> F[Work together to maintain full lifecycle governance]
+  F --> G[Ensure accountability, security, compliance, and operational stability]
+
+    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+```
+
+:bulb: Manually checking configurations for hundreds of systems? That's where the **Security Content Automation Protocol (SCAP)** steps in. SCAP allows security products to automatically verify configurations against established baselines, streamlining the process and reducing the risk of human error.
+
+:necktie: Asset security is a dynamic field, constantly evolving alongside technological advancements. Staying informed about new threats and best practices is crucial. Remember, the security of your organization's valuable assets rests in your hands – and with the knowledge and tools you gain, you'll be well-equipped to safeguard them effectively.
+
+:brain: An asset is anything of value to an organization that needs protection, including tangible items like hardware and facilities, intangible resources such as data, intellectual property, and software, as well as personnel and reputation.
+
+### Open Questions ###
+1. Describe the importance of tracking information assets throughout their entire lifecycle.
+<details>
+  <summary>Show answer</summary>
+Tracking information assets throughout their lifecycle enhances cybersecurity resilience. This practice increases asset visibility, identifies vulnerabilities, enables quicker responses to security alerts, and reveals active applications.
+</details>
+
+2. What is the role of ISO 55000 in asset management?
+<details>
+  <summary>Show answer</summary>
+ISO 55000 provides valuable guidance for the proper management of physical assets, encompassing both IT and non-IT infrastructure components like power and plumbing utilities.
+</details>
+
+3. Why is it crucial to manage even unplanned or discovered assets?
+<details>
+  <summary>Show answer</summary>
+Even unplanned assets, which may arise in agile environments, must be managed to ensure comprehensive asset security. Unmanaged assets can introduce vulnerabilities and compliance issues.
+</details>
+
+4. Define Information Technology Asset Management (ITAM) and its core function.
+<details>
+  <summary>Show answer</summary>
+ITAM comprises a set of business practices dedicated to governing and managing IT assets, including hardware, software, data, and associated processes. Its core function is to ensure asset accountability, maintenance, upgrades, and appropriate retirement.
+</details>
+
+5. Explain the purpose and components of the ISO 19770 standard family.
+<details>
+  <summary>Show answer</summary>
+ISO 19770 is a family of standards designed to help organizations manage IT asset-related risks and costs. It includes five parts covering best practices, software identification tags (SWID), software entitlement terminology, resource utilization reporting, and general ITAM vocabulary.
+</details>
+
+6. How does configuration management contribute to asset security?
+<details>
+  <summary>Show answer</summary>
+Configuration management ensures controlled and documented system and software configurations. This practice is vital to asset security as it prevents configuration drifts that can introduce vulnerabilities and complicate security management
+</details>
+
+7. Differentiate between system baselines and security baselines.
+<details>
+  <summary>Show answer</summary>
+A system baseline defines the approved versions and settings of configuration items for proper system construction. In contrast, a security baseline outlines the minimum security controls needed to protect a given system.
+</details>
+
+8. What is the function of change management in asset security?
+<details>
+  <summary>Show answer</summary>
+Change management involves standardized processes for modifying assets, preventing arbitrary changes, and minimizing disruptions. In asset security, it helps maintain a secure and controlled environment by ensuring that changes don't inadvertently introduce vulnerabilities.
+</details>
+
+9. What potential issues can arise from improper change management?
+<details>
+  <summary>Show answer</summary>
+Improper change management can lead to discrepancies between inventory records and actual environments. It can also increase the risk of security breaches as changes may not be adequately assessed for their security implications.
+</details>
+
+10. What is a Configuration Management Database (CMDB) and its role according to ITIL?
+<details>
+  <summary>Show answer</summary>
+A Configuration Management Database (CMDB), as advocated by ITIL, is a repository that documents inventory and tracks planned deployments and changes. It aids in maintaining an accurate and up-to-date view of the IT environment.
+</details>
