Update 2.04 Manage Data Lifecycle.md

--- a/DOMAIN2: Asset Security/2.04 Manage Data Lifecycle.md
+++ b/DOMAIN2: Asset Security/2.04 Manage Data Lifecycle.md
@@ -29,3 +29,108 @@ In the realm of cybersecurity, understanding the roles and responsibilities asso
 | **Data User**      | Individuals consuming data to perform tasks, relying on access provided; they must comply with usage policies and SLAs, but are not responsible for broader data governance. |
 | **Data Subject**   | Individual whose personal data is processed. Their rights drive regulations like GDPR and influence data governance expectations. :contentReference[oaicite:4]{index=4} |
 
+:link: Compare these roles with the ones depicted in [1.3.3 Organizational Roles and Responsibilities](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.03%20Evaluate%2C%20apply%2C%20and%20sustain%20security%20governance%20principles.md#133-organizational-roles-and-responsibilities)
+
+:link: [GDPR Chapter 2](https://eur-lex.europa.eu/legal-content/EN/TXT/?uri=CELEX:02016R0679-20160504) should be clear for everyone covering a role related to Data Protection
+
+Protecting the data lifecycle necessitates a collaborative effort from all these stakeholders. While data owners and controllers establish policies and guidelines, data custodians implement technical security measures, and data processors ensure data is handled and shared appropriately. Data users benefit from these efforts, while data subjects deserve respect and protection. 
+
+:necktie: While companies have the freedom to define their own data roles, it is advisable to align these roles with legal and regulatory requirements to prevent confusion, misunderstandings, and potential liabilities.
+
+:brain: Under GDPR, **personal data is always owned by the data subject**, meaning that individuals retain control over their own personal information. This regulation ensures that the data subject has rights over how their data is collected, stored, and used, with organizations being responsible for safeguarding it and obtaining consent for processing.
+
+### Open Questions ###
+1. Differentiate between the roles of a data owner and a data custodian.
+<details>
+  <summary>Show answer</summary>
+Data owners have ultimate responsibility for data, including setting rules for its use and protection. Data custodians, on the other hand, are responsible for the day-to-day management and technical implementation of data security measures as directed by the data owner.
+</details>
+
+2. Explain the concept of "due care" in the context of asset management. Provide an example.
+<details>
+  <summary>Show answer</summary>
+Due care in asset management refers to taking reasonable measures to protect valuable assets. An example is maintaining an accurate and up-to-date asset inventory to ensure proper tracking and management of sensitive information.
+</details>
+
+3. How does the General Data Protection Regulation (GDPR) define a data processor?
+<details>
+  <summary>Show answer</summary>
+The GDPR defines a data processor as a natural or legal person, public authority, agency, or other body that processes personal data solely on behalf of the data controller.
+</details>
+
+4. Describe the responsibilities of a data controller according to the GDPR.
+<details>
+  <summary>Show answer</summary>
+Data controllers determine the purpose and means of processing personal data. They are responsible for adhering to GDPR principles, including lawfulness, fairness, transparency, data minimization, accuracy, storage limitation, integrity, and confidentiality.
+</details>
+
+5. What are the potential consequences for companies that violate privacy rules outlined in the GDPR?
+<details>
+  <summary>Show answer</summary>
+Companies violating GDPR privacy rules face significant fines, up to 4% of their global annual revenue. They can also face reputational damage and legal action from affected individuals.
+</details>
+
+6. Explain the purpose of IT governance methods like COBIT.
+<details>
+  <summary>Show answer</summary>
+IT governance methods like COBIT help align IT activities with business goals, including balancing security requirements with operational needs. They provide a framework for managing IT risks and ensuring data security.
+</details>
+
+7. Differentiate between a user and a subject in the context of data access.
+<details>
+  <summary>Show answer</summary>
+A user is any individual who accesses data through a computing system to perform tasks. A subject, in a broader sense, includes any entity that accesses a resource, such as programs, processes, or computers.
+</details>
+
+8. What are the key responsibilities of a data processor in safeguarding data?
+<details>
+  <summary>Show answer</summary>
+Data processors ensure the secure transfer, transmission, and handling of data on behalf of the data owner. They are responsible for adhering to contractual agreements and maintaining data confidentiality, integrity, and availability.
+</details>
+
+9. Why is it important to train data processors on acceptable data handling practices?
+<details>
+  <summary>Show answer</summary>
+Training data processors ensures they understand acceptable data handling practices and comply with relevant policies and regulations. This minimizes risks associated with accidental or intentional data misuse.
+</details>
+
+10. What is the significance of respecting data subjects in the context of data privacy?
+<details>
+  <summary>Show answer</summary>
+Respecting data subjects means recognizing their right to privacy and ensuring their personal information is handled ethically and responsibly. It is fundamental to building trust and maintaining compliance with data protection laws.
+</details>
+
+---
+
+## 2.4.2 Data collection ##
+
+A critical aspect of safeguarding data lies in understanding and managing the data lifecycle, a concept encompassing the journey of data from its creation to its ultimate disposal. This lifecycle, provides a framework for implementing security controls at every stage, minimizing risks, and adhering to legal and ethical obligations.
+
+The image below recap the Data lifecycle:
+```mermaid
+flowchart LR
+  A[Create / Collect] --> B[Store]
+  B --> C[Use]
+  C --> D[Share]
+  D --> E[Archive]
+  E --> F[Destroy]
+
+
+
+  
+  A --- A1[Generation or modification of digital content]
+  B --- B1[Committing data to a storage repository]
+  C --- C1[Viewing or processing data in activities]
+  D --- D1[Making information accessible to others]
+  E --- E1[Transitioning data to long‑term storage]
+  F --- F1[Physically or digitally eliminating data]
+
+    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+```
+
+The data lifecycle begins with **data collection (or data creation)**, which encompasses data creation, acquisition, aggregation, or any instance where data enters an organization's system. This initial phase is where secure defaults, privacy by design, and other security principles are critical. Embedding security measures from the outset, rather than as an afterthought, is a cornerstone of best practices and regulatory requirements. It's also crucial to obtain consent or have a legitimate legal basis for collecting data, as emphasized by regulations like the GDPR.
+
+Data classification, typically conducted during data collection or creation, is essential for applying appropriate security controls. Additionally, tagging data with relevant attributes and establishing access restrictions are crucial steps in this phase. 
+
+:link: Review what you have learned in [2.1.1 Data Classification]
